--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Salesforce CI/CD Pipeline
 
 # Controls when the workflow will run
 on:
@@ -22,15 +22,28 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '18.18.2'
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Install Salesforce CLI
+        run: npm install -g sfdx-cli
+
+      - name: Authenticate with Salesforce
+        run: sfdx auth:sfdxurl:store -f sfdx-url.txt
+
+      - name: Static Code Analysis
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          sfdx force:source:convert -d mdapi
+          sfdx scanner:run --target ./mdapi --format table
+
+      - name: Deploy to Salesforce
+        run: |
+          sfdx force:source:deploy -p force-app -u MySandbox
+
+
+
