--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,14 +13,10 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  setup-environment:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -40,15 +36,32 @@ jobs:
       - name: Authenticate with Salesforce
         run: sfdx auth:sfdxurl:store -f sfdx-url.txt
 
+  #  "build" job
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    needs: setup-environment
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
       - name: Static Code Analysis
         run: |
           cd MyProject
           sfdx force:source:convert -d mdapi
           sfdx scanner:run --target ./mdapi --format table
 
-      # - name: Deploy to Salesforce
-      #   run: |
-      #     sfdx force:source:deploy -p force-app -u MySandbox
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [setup-environment, build]
 
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Deploy to Salesforce
+      run: sfdx force:source:deploy -p MyProject
 
 
