--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,6 +21,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache
+            **/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Use nvm to install and use Node.js
         run: |
           . ~/.nvm/nvm.sh
@@ -36,6 +46,11 @@ jobs:
       - name: Authenticate with Salesforce
         run: sfdx auth:sfdxurl:store -f sfdx-url.txt
 
+      - name: Save installed dependencies
+        id: save-deps
+        run: |
+          echo "dependencies-path=~/.cache" >> $GITHUB_ENV
+
   #  "build" job
   build:
     # The type of runner that the job will run on
@@ -46,6 +61,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
+      - name: Restore cached dependencies
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.dependencies-path }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
 
       - name: Static Code Analysis
         run: |
@@ -60,6 +81,12 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+
+    - name: Restore cached dependencies
+      uses: actions/cache@v3
+      with:
+        path: ${{ env.dependencies-path }}
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
 
     - name: Deploy to Salesforce
       run: sfdx force:source:deploy -p MyProject
