--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -47,9 +47,10 @@ jobs:
         run: sfdx auth:sfdxurl:store -f sfdx-url.txt
 
       - name: Save installed dependencies
-        id: save-deps
-        run: |
-          echo "dependencies-path=~/.cache" >> $GITHUB_ENV
+        uses: actions/github-script@v6
+        with:
+          script: |
+            core.exportVariable('dependencies_path', '~/.cache')
 
   #  "build" job
   build:
@@ -65,7 +66,7 @@ jobs:
       - name: Restore cached dependencies
         uses: actions/cache@v3
         with:
-          path: ${{ env.dependencies-path }}
+          path: ${{ env.dependencies_path }}
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
 
       - name: Static Code Analysis
