--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,7 +14,7 @@ env:
 jobs:
   setup:
     name: Setup Environment
-    runs-on: ${{ env.runs_on }}
+    runs-on: ubuntu-latest
     outputs:
       cache-key: ${{ steps.cache-dependencies.outputs.cache-key }}
 
@@ -50,7 +50,7 @@ jobs:
 
   build:
     name: Build Project
-    runs-on: ${{ env.runs_on }}
+    runs-on: ubuntu-latest
     needs: setup
 
     steps:
@@ -73,7 +73,7 @@ jobs:
 
   deploy:
     name: Deploy to Salesforce
-    runs-on: ${{ env.runs_on }}
+    runs-on: ubuntu-latest
     needs: [setup, build]
 
     steps:
