--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,33 +1,34 @@
+# This is a basic workflow to help you get started with Actions
+
 name: Salesforce CI/CD Pipeline
 
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  workflow_dispatch:
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 env:
   dependencies_path: ~/.cache
   runs_on: ubuntu-latest
-
+  
 jobs:
   setup:
     name: Setup Environment
     runs-on: ubuntu-latest
-    outputs:
-      cache-key: ${{ steps.cache-dependencies.outputs.cache-key }}
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Cache dependencies
-        id: cache-dependencies
         uses: actions/cache@v3
         with:
           path: |
-            ${{ env.dependencies_path }}
+            ~/.cache
             **/node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
@@ -48,11 +49,14 @@ jobs:
       - name: Authenticate with Salesforce
         run: sfdx auth:sfdxurl:store -f sfdx-url.txt
 
+  #  "build" job
   build:
-    name: Build Project
+    # The type of runner that the job will run on
+    name: build
     runs-on: ubuntu-latest
     needs: setup
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -61,9 +65,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{ env.dependencies_path }}
-          key: ${{ needs.setup.outputs.cache-key }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
 
       - name: Static Code Analysis
         run: |
@@ -72,21 +74,21 @@ jobs:
           sfdx scanner:run --target ./mdapi --format table
 
   deploy:
-    name: Deploy to Salesforce
+    name: deploy
     runs-on: ubuntu-latest
     needs: [setup, build]
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Restore cached dependencies
-        uses: actions/cache@v3
-        with:
-          path: ${{ env.dependencies_path }}
-          key: ${{ needs.setup.outputs.cache-key }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+    - name: Restore cached dependencies
+      uses: actions/cache@v3
+      with:
+        path: ${{ env.dependencies_path }}
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
 
-      - name: Deploy to Salesforce
-        run: sfdx force:source:deploy -p MyProject
+    - name: Deploy to Salesforce
+      run: sfdx force:source:deploy -p MyProject
+
+
