--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,10 @@ jobs:
       - name: Cache npm dependencies
         uses: actions/cache@v3
         with:
-          path: '~/.npm'
+          path: |
+            /usr/local/lib/node_modules
+            ~/.npm
+            /usr/local/bin
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
@@ -65,7 +68,10 @@ jobs:
       - name: Restore cached dependencies
         uses: actions/cache@v3
         with:
-          path: ${{ env.dependencies_path }}
+          path: |
+            /usr/local/lib/node_modules
+            ~/.npm
+            /usr/local/bin
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
 
       - name: Static Code Analysis
