--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -58,7 +58,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    # Steps represent a sequence of tasks to Restore cache
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -97,6 +97,8 @@ jobs:
         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
 
     - name: Deploy to Salesforce
-      run: sfdx force:source:deploy -p MyProject
+      run: |
+          cd MyProject
+          sfdx force:source:deploy -p .
 
 
