--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -99,6 +99,5 @@ jobs:
     - name: Deploy to Salesforce
       run: |
           cd MyProject
-          sfdx force:source:deploy -p .
-
+          sfdx project deploy start -p . -u dody.dodo509-55sv@force.com
 
